			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * PORT: Fixed various problems on SGI (IRIX 6.5), including realisation
    of dynamic stacks based on MAP_AUTOGROW|MAP_AUTORESRV.

  * FIXED: only open /dev/zero once in multi-threaded version where
    MAP_ANON is not supported.

VERSION 5.1.9 (Mar 06, 2003)
============================

  * ENHANCED: Check for instantiation errors in send_list/[2,3].  Anjo
    Anjewierden.

  * ENHANCED: Use a key	to speedup searching for potentionally matching
    messages in long message queues.

  * FIXED: Bug#28: race condition on message queues.  Mike Elston.  Added
    abstracted version of his test to the thread test-suite.

  * FIXED: Error-reporting in thread_join/2.  Added check to avoid joining
    detached threads.

  * PORT: Added #define _GNU_SOURCE 1 into pl-thread.c to compile without
    warnings on glibc based systems.

  * FIXED: error handling if alias(Alias) option is used in thread_create/3
    with an already used thread or queue name.  Part of Bug#28, Mike Elston.

  * MODIFIED: succ/2 now only handles natural (>= 0) numbers.  Compatibility.
    See discussion in the mailing list (Richard O'Keefe):
    http://www.swi.psy.uva.nl/projects/SWI-Prolog/mailinglist/archive/2833.html

  * ADDED: library(url): is_global_url/1

  * ADDED/FIXED: Various problems and enhancements to check/0 reporting
    undefined predicates.  Moved make/0 to library(make) and added a
    call to list_undefined/0 to report on undefined predicates after
    completing the make.

  * FIXED: features not available in some port are not reported with the
    exception not_implemented(Category, Description).  Lourens van der Meij.

  * FIXED: Bug #25: compilation on Solaris 8
