@@ -508,3 +508,4 @@ ATOM("yf"),
 ATOM("yfx"),
 ATOM("yfy"),
 ATOM("zero_divisor"),
+ATOM("halt"),
